--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style">
 </head>
 <body>
-    <h1>L'homme est un loup pour l'homme</h1>
+    <h1>L'homme est un loup pour l'homme</h1>git add .
 </body>
 </html>
