--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    
-</body>
+<div class="content">
+    <h1>l'homme est un loup pour l'homme</h1>
+    <button>Tuer moi</button>
+</div>
 </html>
